--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".BackGroundServices.LocationService" />
+        <service
+
+            android:name=".BackGroundServices.LocationService"
+            android:launchMode="singleTop"
+            android:enabled="true"
+
+            />
+
+        <receiver
+            android:name=".BackGroundServices.SensorRestarterBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true"
+            android:label="RestartServiceWhenStopped">
+            <intent-filter>
+                <action android:name="ac.in.ActivityRecognition.RestartSensor" />
+            </intent-filter>
+        </receiver>
     </application>
 </manifest>
